manifests/argocd_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - host: k3s.local
    http:
      paths:
      - path: /argocd
        pathType: Exact
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - k3s.local
